Renamed optimize to optimizeScript.

--- a/app/views/optimizeScript.scala.html
+++ b/app/views/optimizeScript.scala.html
@@ -8,5 +8,5 @@
     <style>.async-hide {
         opacity: 0 !important
     } </style>
-    <script async type="text/javascript" src="@assets("optimize.js")"></script>
+    <script async type="text/javascript" src="@assets("optimizeScript.js")"></script>
 }
