--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -497,6 +497,7 @@ form {
 }
 
 .form__input {
+  -webkit-appearance: none;
   appearance: none;
   background: white;
   border: 1px solid #dcdcdc;
