Hide back-end doc

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -87,8 +87,8 @@
 
 	@scripts
 
-	 <!-- This script is intentionally at the bottom of the file. Please check
-	      all the critical flows work correctly if you change its position -->
+	@* This script is intentionally at the bottom of the file. Please check
+	      all the critical flows work correctly if you change its position *@
 	<script type="text/javascript" src="@assets(mainJsBundle)"></script>
 	<!-- build-commit-id: @app.BuildInfo.gitCommitId -->
 </body>
