Add selected country checkmark

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -6,7 +6,12 @@
       United Kingdom (£)
     </summary>
     <ul class="countries__list">
-      <li class="countries__item"><a href="#">United Kingdom (£)</a></li>
+      <li class="countries__item"><a href="#">
+        <span class="icon">
+          <svg width="18" height="14" xmlns="http://www.w3.org/2000/svg"><path d="M1.36 6.9l-.86.888L4.798 14h.409L17.5.865 16.64 0 5.207 10.694z" /></svg>
+        </span>
+        United Kingdom (£)
+      </a></li>
       <li class="countries__item"><a href="#">United States (US$)</a></li>
       <li class="countries__item"><a href="#">Europe (€)</a></li>
       <li class="countries__item"><a href="#">New Zealand (NZ$)</a></li>
