--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -37,7 +37,7 @@
         </li>
         <li class="form__radio-group__item">
           <input id="contributionType-oneoff" class="form__radio-group__input" type="radio" name="contributionType" value="oneoff">
-          <label for="contributionType-oneoff" class="form__radio-group__label">One off</label>
+          <label for="contributionType-oneoff" class="form__radio-group__label">One-off</label>
         </li>
       </ul>
     </fieldset>
@@ -131,7 +131,7 @@
       <ul class="form__radio-group__list">
         <li class="form__radio-group__item">
           <input id="contributionPayment-paypal" class="form__radio-group__input" name="contributionPayment" type="radio" value="paypal" checked>
-          <label for="contributionPayment-paypal" class="form__radio-group__label">Paypal</label>
+          <label for="contributionPayment-paypal" class="form__radio-group__label">PayPal</label>
         </li>
         <li class="form__radio-group__item">
           <input id="contributionPayment-card" class="form__radio-group__input" name="contributionPayment" type="radio" value="card">
