Add radio button state

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -134,11 +134,17 @@
       <ul class="form__radio-group__list">
         <li class="form__radio-group__item">
           <input id="contributionPayment-paypal" class="form__radio-group__input" name="contributionPayment" type="radio" value="paypal" checked>
-          <label for="contributionPayment-paypal" class="form__radio-group__label">PayPal</label>
+          <label for="contributionPayment-paypal" class="form__radio-group__label">
+            <span class="radio-ui"></span>
+            <span>PayPal</span>
+          </label>
         </li>
         <li class="form__radio-group__item">
           <input id="contributionPayment-card" class="form__radio-group__input" name="contributionPayment" type="radio" value="card">
-          <label for="contributionPayment-card" class="form__radio-group__label">Credit/Debit Card</label>
+          <label for="contributionPayment-card" class="form__radio-group__label">
+            <span class="radio-ui"></span>
+            <span>Credit/Debit Card</span>
+          </label>
         </li>
       </ul>
     </fieldset>
