--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -511,10 +511,35 @@ form {
 }
 
 .form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label {
+  align-items: center;
   border-color: #00b2ff;
+  display: flex;
   font-weight: bold;
 }
-        
+
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  border-color: #999;
+  display: inline-block;
+  border-style: solid;
+  border-width: 1px;
+  margin-left: -15px;
+  margin-right: 15px;
+}
+
+.form__radio-group--buttons .form__radio-group__input:not(:checked) + .form__radio-group__label:hover .radio-ui {
+  border-color: #00b2ff;
+  box-shadow: 0 0 0 2px #90DCFF;
+}
+
+.form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label .radio-ui {
+  border-color: #00b2ff;
+  box-shadow: inset 0 0 0 1px #fff;
+  background: #00b2ff;
+}
+
 .form__label {
   font-weight: bold;
   line-height: 1;
@@ -620,3 +645,4 @@ form {
 .icon {
   fill: inherit;
 }
+
