--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -136,14 +136,16 @@
           <input id="contributionPayment-paypal" class="form__radio-group__input" name="contributionPayment" type="radio" value="paypal" checked>
           <label for="contributionPayment-paypal" class="form__radio-group__label">
             <span class="radio-ui"></span>
-            <span>PayPal</span>
+            <span class="radio-ui__label">PayPal</span>
+            <img class="radio-ui__icon radio-ui__icon--paypal" src="/assets-payment/paypal.png" alt>
           </label>
         </li>
         <li class="form__radio-group__item">
           <input id="contributionPayment-card" class="form__radio-group__input" name="contributionPayment" type="radio" value="card">
           <label for="contributionPayment-card" class="form__radio-group__label">
             <span class="radio-ui"></span>
-            <span>Credit/Debit Card</span>
+            <span class="radio-ui__label">Credit/Debit Card</span>
+            <img class="radio-ui__icon radio-ui__icon--card" src="/assets-payment/card.svg" alt>
           </label>
         </li>
       </ul>
