--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -503,17 +503,16 @@ form {
 }
 
 .form__radio-group--buttons .form__radio-group__label {
+  align-items: center;
   border: 1px solid #dcdcdc;
   border-radius: 20px;
-  display: block;
+  display: flex;
   margin-bottom: 8px;
-  padding: 9px 10px 9px 38px;
+  padding: 9px 0;
 }
 
 .form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label {
-  align-items: center;
   border-color: #00b2ff;
-  display: flex;
   font-weight: bold;
 }
 
@@ -525,7 +524,7 @@ form {
   display: inline-block;
   border-style: solid;
   border-width: 1px;
-  margin-left: -15px;
+  margin-left: 15px;
   margin-right: 15px;
 }
 
@@ -534,10 +533,32 @@ form {
   box-shadow: 0 0 0 2px #90DCFF;
 }
 
+.form__radio-group--buttons .form__radio-group__input:not(:checked) + .form__radio-group__label .radio-ui__icon {
+  filter: grayscale(100%);
+}
+
 .form__radio-group--buttons .form__radio-group__input:checked + .form__radio-group__label .radio-ui {
   border-color: #00b2ff;
   box-shadow: inset 0 0 0 1px #fff;
   background: #00b2ff;
+}
+
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui__label {
+  flex: 1;
+}
+
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui__icon--paypal {
+  height: 18px;
+  width: 15px;
+  margin-right: 16px;
+  margin-left: 5px;
+}
+
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui__icon--card {
+  height: 14px;
+  width: 22px;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
 .form__label {
