--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -18,7 +18,7 @@ details:not([open]) > :not(summary) {
 
 header[role="banner"] {
   background-color: #e9eff1;
-  border-bottom: 1px solid #dcdcdc;
+  border-bottom: 1px solid gu-colour(neutral-4);
   position: relative;
   z-index: 1;
 }
@@ -27,12 +27,12 @@ header[role="banner"] {
   width: 69px;
   height: 69px;
   position: relative;
-  top: 24px;
+  top: $gu-v-spacing * 2;
 }
 
 .countries {
   background: white;
-  border: 1px solid #dcdcdc;
+  border: 1px solid gu-colour(neutral-4);
   font-family: $gu-text-sans-web;
   max-width: 355px;
   padding: 0;
@@ -41,7 +41,7 @@ header[role="banner"] {
 
 .countries summary {
   align-items: center;
-  color: #999;
+  color: gu-colour(light-black);
   display: flex;
   fill: currentColor;
   height: 40px;
@@ -59,7 +59,7 @@ header[role="banner"] {
 }
 
 .countries .icon--world {
-  padding: 0 13px;
+  padding: 0 $gu-v-spacing;
 }
 
 .countries .icon__arrow-up {
@@ -76,7 +76,7 @@ header[role="banner"] {
 
 .countries summary:hover,
 .countries summary:focus {
-  box-shadow: 0 0 0 3px #ffe500;
+  box-shadow: 0 0 0 3px gu-colour(news-garnett-highlight);
   color: inherit;
 }
 
@@ -100,7 +100,7 @@ header[role="banner"] {
 
 .countries__item > a:hover,
 .countries__item > a:focus {
-  background: #ffe500;
+  background: gu-colour(news-garnett-highlight);
   font-weight: bold;
 }
 
@@ -112,8 +112,8 @@ header[role="banner"] {
 
 footer[role="contentinfo"] {
   background: #333;
-  color: #999;
-  padding-bottom: 24px;
+  color: gu-colour(light-black);
+  padding-bottom: $gu-v-spacing * 2;
 }
 
 /* Support navigation */
@@ -124,7 +124,7 @@ footer[role="contentinfo"] {
 }
 
 .support__item {
-  padding-top: 4px;
+  padding-top: $gu-v-spacing / 3;
 }
 
 .support__link {
@@ -145,11 +145,11 @@ body {
 }
 
 h1 {
-  border-bottom: 1px solid #dcdcdc;
+  border-bottom: 1px solid gu-colour(neutral-4);
   color: #121212;
   font: bold 24px/1.25 $gu-egyptian-web;
   margin: 0 -10px;
-  padding: 0 10px 12px;
+  padding: 0 10px $gu-v-spacing;
 }
  
 input,
@@ -162,7 +162,7 @@ button {
 .blurb {
   font-size: 14px;
   line-height: 1.4;
-  margin: 3px 0 9px;
+  margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
 }
 
 footer[role="contentinfo"] {
@@ -186,12 +186,12 @@ header[role="banner"] {
 @media (min-width: 740px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 350px) 24px;
+    padding: 0 calc(50% - 350px) ($gu-v-spacing * 2);
     width: 700px;
   }
   
   .gu-content__main {
-    border-color: #dcdcdc;
+    border-color: gu-colour(neutral-4);
     border-style: none solid;
     border-width: 0 1px;
     width: 340px;
@@ -226,7 +226,7 @@ header[role="banner"] {
   .support__item {
     margin-left: -10px;
     padding-left: 10px;
-    border-left: 1px solid #999;
+    border-left: 1px solid gu-colour(light-black);
   }
 
 }
@@ -234,7 +234,7 @@ header[role="banner"] {
 @media (min-width: 1140px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 550px) 24px calc(50% - 390px);
+    padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
     width: 940px;
   }
 
@@ -256,7 +256,7 @@ header[role="banner"] {
 @media (min-width: 1300px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 620px) 24px;
+    padding: 0 calc(50% - 620px) ($gu-v-spacing * 2);
     width: 1240px;
   }
   
@@ -297,7 +297,7 @@ header[role="banner"] {
     .gu-content,
     header[role="banner"],
     footer[role="contentinfo"] {
-      padding: 0 0 24px;
+      padding: 0 0 ($gu-v-spacing * 2);
       width: auto;
 
       grid-column-gap: 20px;
