--- a/assets/components/headers/simpleHeader/simpleHeader.scss
+++ b/assets/components/headers/simpleHeader/simpleHeader.scss
@@ -1,11 +1,11 @@
 .component-simple-header {
-  background-color: gu-colour(nav-background-colour);
+  background-color: gu-colour(nav-faded);
 
   .svg-guardian-logo {
     height: 100%;
   }
 
-  border-bottom: 1px solid gu-colour(nav-rule);
+  border-bottom: 1px solid gu-colour(nav-dark);
 }
 
 .component-simple-header__link {
