--- a/assets/components/introduction/introduction.scss
+++ b/assets/components/introduction/introduction.scss
@@ -1,5 +1,5 @@
 @mixin introduction {
-  background-color: gu-colour(nav-background-colour);
+  background-color: gu-colour(nav-faded);
   color: gu-colour(garnett-neutral-1);
   position: relative;
   overflow: hidden;
