--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -84,8 +84,8 @@ $gu-colours: (
 	light-black: #999,
 
 	// Garnett
-  nav-background-colour: #e7edef,
-  nav-rule: #abc2c9,
+  nav-faded: #e9eff1,
+  nav-dark: #bbcdd3,
 
   garnett-neutral-1: #121212,
   garnett-neutral-2: #999999,
