--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -161,17 +161,7 @@
 <footer role="contentinfo">
   <div class="license">
     <small class="license__txt">© 2018 Guardian News and Media Limited or its affiliated companies. All rights reserved.</small>
+
+    <p>The ultimate owner of the Guardian is The Scott Trust Limited, whose role it is to secure the editorial and financial independence of the Guardian in perpetuity. Reader contributions support the Guardian’s journalism. Please note that your support of the Guardian’s journalism does not constitute a charitable donation, as such your contribution is not eligible for Gift Aid in the UK nor a tax-deduction elsewhere. If you have any questions about contributing to the Guardian, please <a href="mailto:contribution.support@@theguardian.com">contact us here</a>.</p>
   </div>
-
-  <nav class="support">
-    <ul class="support__menu">
-      <li class="support__item"><a class="support__link" href="#">Help</a></li>
-      <li class="support__item"><a class="support__link" href="#">Terms &amp; Conditions</a></li>
-      <li class="support__item"><a class="support__link" href="#">Contact us</a></li>
-      <li class="support__item"><a class="support__link" href="#">Privacy Policy</a></li>
-      <li class="support__item"><a class="support__link" href="#">Report technical issue</a></li>
-      <li class="support__item"><a class="support__link" href="#">Cookie Policy</a></li>
-    </ul>
-  </nav>
-
 </footer>
