--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -17,8 +17,8 @@ details:not([open]) > :not(summary) {
 /*= HEADER */
 
 header[role="banner"] {
-  background-color: #e9eff1;
-  border-bottom: 1px solid gu-colour(neutral-4);
+  background-color: gu-colour(nav-faded);
+  border-bottom: 1px solid gu-colour(garnett-neutral-4);
   position: relative;
   z-index: 1;
 }
@@ -32,7 +32,7 @@ header[role="banner"] {
 
 .countries {
   background: white;
-  border: 1px solid gu-colour(neutral-4);
+  border: 1px solid gu-colour(garnett-neutral-4);
   font-family: $gu-text-sans-web;
   max-width: 355px;
   padding: 0;
@@ -41,7 +41,7 @@ header[role="banner"] {
 
 .countries summary {
   align-items: center;
-  color: gu-colour(light-black);
+  color: gu-colour(garnett-neutral-2);
   display: flex;
   fill: currentColor;
   height: 40px;
@@ -111,8 +111,8 @@ header[role="banner"] {
 /*= FOOTER */
 
 footer[role="contentinfo"] {
-  background: #333;
-  color: gu-colour(light-black);
+  background: gu-colour(media-garnett-main-1);
+  color: gu-colour(garnett-neutral-2);
   padding-bottom: $gu-v-spacing * 2;
 }
 
@@ -128,13 +128,13 @@ footer[role="contentinfo"] a {
 
 /*= TYPOGRAPHY */
 body {
-  color: #333;
+  color: gu-colour(media-garnett-main-1);
   font: normal 16px/1.5 $gu-text-egyptian-web;
 }
 
 h1 {
-  border-bottom: 1px solid gu-colour(neutral-4);
-  color: #121212;
+  border-bottom: 1px solid gu-colour(garnett-neutral-4);
+  color: gu-colour(garnett-neutral-1);
   font: bold 24px/1.25 $gu-egyptian-web;
   margin: 0 -10px;
   padding: 0 10px $gu-v-spacing;
@@ -167,7 +167,7 @@ header[role="banner"] {
   height: 75px;
 }
 
-@media (min-width: 740px) {
+@include mq($from: tablet) {
   header[role="banner"],
   footer[role="contentinfo"] {
     padding: 0 calc(50% - 350px) ($gu-v-spacing * 2);
@@ -175,7 +175,7 @@ header[role="banner"] {
   }
   
   .gu-content__main {
-    border-color: gu-colour(neutral-4);
+    border-color: gu-colour(garnett-neutral-4);
     border-style: none solid;
     border-width: 0 1px;
     width: 340px;
@@ -194,7 +194,7 @@ header[role="banner"] {
   }
   }
 
-@media (min-width: 1140px) {
+@include mq($from: leftCol) {
   header[role="banner"],
   footer[role="contentinfo"] {
     padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
@@ -207,7 +207,7 @@ header[role="banner"] {
   }
 }
 
-@media (min-width: 1300px) {
+@include mq($from: wide) {
   header[role="banner"],
   footer[role="contentinfo"] {
     padding: 0 calc(50% - 620px) ($gu-v-spacing * 2);
@@ -239,14 +239,14 @@ header[role="banner"] {
     grid-row: header-b / footer-t;  
   }
     
-  @media (min-width: 740px) {
+  @include mq($from: tablet) {
     .gu-content,
     header[role="banner"],
     footer[role="contentinfo"] {
       padding: 0 0 ($gu-v-spacing * 2);
       width: auto;
 
-      grid-column-gap: 20px;
+      grid-column-gap: $gu-h-spacing;
       grid-template-columns: 1fr repeat(8, 70px) 1fr;  
     }
     
@@ -276,11 +276,11 @@ header[role="banner"] {
     }
   }
 
-  @media (min-width: 1140px) {
+  @include mq($from: leftCol) {
     .gu-content,
     header[role="banner"],
     footer[role="contentinfo"] {
-      grid-column-gap: 20px;
+      grid-column-gap: $gu-h-spacing;
       grid-template-columns: 1fr repeat(14, 60px) 1fr;  
       width: auto;
     }
@@ -305,11 +305,11 @@ header[role="banner"] {
     }
   }  
 
-  @media (min-width: 1300px) {
+  @include mq($from: wide) {
     .gu-content,
     header[role="banner"],
     footer[role="contentinfo"] {
-      grid-column-gap: 20px;
+      grid-column-gap: $gu-h-spacing;
       grid-template-columns: 1fr repeat(16, 60px) 1fr;  
     }  
 
