Renamed egyptian web to headline.

--- a/assets/components/checkboxInput/checkboxInput.scss
+++ b/assets/components/checkboxInput/checkboxInput.scss
@@ -10,8 +10,7 @@
   margin-bottom: 4px;
   cursor: pointer;
   display: block;
-  font-family: $gu-egyptian-web
-
+  font-family: $gu-headline;
 }
 
 .component-checkbox__copy {
