--- a/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
+++ b/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
@@ -13,7 +13,7 @@
   .component-select-input__select {
     margin-top: 8px;
     font-size: 12px;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-weight: 500;
     line-height: 20px;
     cursor: pointer;
