--- a/assets/components/directDebit/directDebitForm/directDebitForm.scss
+++ b/assets/components/directDebit/directDebitForm/directDebitForm.scss
@@ -29,7 +29,7 @@
 
 .component-direct-debit-form__field-label {
   display: block;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: 600;
   font-size: 14px;
   margin-top: 8px;
