--- a/assets/components/doubleHeading/doubleHeading.scss
+++ b/assets/components/doubleHeading/doubleHeading.scss
@@ -1,6 +1,6 @@
 .component-double-heading__heading {
 	font-weight: bold;
-	font-family: $gu-egyptian-web;
+	font-family: $gu-headline;
 	margin: 0;
 }
 
