--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -5,7 +5,7 @@
 
 .component-heading-block__heading {
   font-size: 26px;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bold;
   line-height: 1.12;
   padding: 0 ($gu-h-spacing / 2) ($gu-v-spacing * 2);
@@ -30,6 +30,6 @@
   vertical-align: middle;
   font-size: 14px;
   line-height: 1;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-style: italic;
 }
