--- a/assets/components/introduction/introduction.scss
+++ b/assets/components/introduction/introduction.scss
@@ -3,7 +3,7 @@
   color: gu-colour(garnett-neutral-1);
   position: relative;
   overflow: hidden;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bold;
   font-size: 28px;
   line-height: 30px;
