--- a/assets/components/patronsEvents/patronsEvents.scss
+++ b/assets/components/patronsEvents/patronsEvents.scss
@@ -10,7 +10,7 @@
   }
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
@@ -68,7 +68,7 @@
   }
 
   .component-other-product__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 36px;
     line-height: 1;
     font-weight: bold;
