--- a/assets/components/priceCta/priceCta.scss
+++ b/assets/components/priceCta/priceCta.scss
@@ -67,7 +67,7 @@
   color: gu-colour(news-garnett-highlight);
   font-size: 26px;
   line-height: 26px;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bold;
   margin-bottom: 4px;
 }
