--- a/assets/components/svgs/svg.scss
+++ b/assets/components/svgs/svg.scss
@@ -78,13 +78,13 @@
 }
 
 .svg-scribble {
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
 }
 
 .svg-advertising-graph-mobile, .svg-advertising-graph-desktop {
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
 }
 
 .svg-paywall-mobile, .svg-paywall-desktop, .svg-paywall-wide {
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
 }
