--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -1,5 +1,5 @@
 .component-independent-journalism {
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   color: #121212;
   @include mq($from: desktop) {
     border-left: 1px solid gu-colour(garnett-neutral-4);
