--- a/assets/pages/paypal-error/payPalError.scss
+++ b/assets/pages/paypal-error/payPalError.scss
@@ -21,7 +21,7 @@
   // ----- Headings
 
   .paypal-error__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     color: gu-colour(garnett-neutral-1);
     font-size: 28px;
     line-height: 32px;
@@ -34,7 +34,7 @@
   }
 
   .paypal-error__copy {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 28px;
     font-weight: lighter;
