--- a/assets/stylesheets/fallback-pages/unsupportedBrowser.scss
+++ b/assets/stylesheets/fallback-pages/unsupportedBrowser.scss
@@ -64,14 +64,14 @@
 
 .unsupported-browser__why-support-heading {
   font-weight: 700;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-size: 24px;
   padding: $gu-v-spacing 0 0;
 }
 
 .unsupported-browser__why-support-subheading {
   font-weight: 700;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-size: 20px;
   padding: $gu-v-spacing 0;
 }
