--- a/assets/stylesheets/gu-sass/typography.scss
+++ b/assets/stylesheets/gu-sass/typography.scss
@@ -7,7 +7,7 @@
 
 // ----- Font Families ----- //
 
-$gu-egyptian-web: 'Guardian Egyptian Web', Georgia, serif !default;
+$gu-headline: 'Guardian Headline', Georgia, serif !default;
 $gu-text-egyptian-web: 'Guardian Text Egyptian Web', Georgia, serif !default;
 $gu-sans-web: 'Guardian Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
 $gu-text-sans-web: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
