--- a/assets/stylesheets/gu-sass/webfonts.scss
+++ b/assets/stylesheets/gu-sass/webfonts.scss
@@ -249,7 +249,7 @@ $guss-webfonts: (
 // ----- Guardian Egyptian Web Fonts ----- //
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-Light.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-Light.woff") format("woff"),
     url("/assets/fonts/GHGuardianHeadline-Light.ttf") format("ttf");
@@ -257,7 +257,7 @@ $guss-webfonts: (
 }
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-LightItalic.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-LightItalic.woff") format("woff"),
     url("/assets/fonts/GHGuardianHeadline-LightItalic.ttf") format("ttf");
@@ -266,7 +266,7 @@ $guss-webfonts: (
 }
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-Regular.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-Regular.woff") format("woff"),
     url("/assets/fonts/GHGuardianHeadline-Regular.ttf") format("ttf");
@@ -274,7 +274,7 @@ $guss-webfonts: (
 }
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-RegularItalic.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-RegularItalic.woff") format("woff"),
     url("/assets/fonts/GHGuardianHeadline-RegularItalic.ttf") format("ttf");
@@ -283,7 +283,7 @@ $guss-webfonts: (
 }
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-Semibold.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-Semibold.woff")  format("woff"),
     url("/assets/fonts/GHGuardianHeadline-Semibold.ttf")   format("ttf");;
@@ -291,7 +291,7 @@ $guss-webfonts: (
 }
 
 @font-face {
-    font-family: "Guardian Egyptian Web";
+    font-family: "Guardian Headline";
     src: url("/assets/fonts/GHGuardianHeadline-Bold.woff2") format("woff2"),
     url("/assets/fonts/GHGuardianHeadline-Bold.woff") format("woff"),
     url("/assets/fonts/GHGuardianHeadline-Bold.ttf") format("ttf");
