--- a/assets/components/contribute/contribute.scss
+++ b/assets/components/contribute/contribute.scss
@@ -2,7 +2,7 @@
   padding-bottom: $gu-v-spacing * 3;
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
