--- a/assets/components/contributionsCheckout/contributionsCheckout.scss
+++ b/assets/components/contributionsCheckout/contributionsCheckout.scss
@@ -22,7 +22,7 @@
     }
 
     .component-page-section__header {
-      font-family: $gu-egyptian-web;
+      font-family: $gu-headline;
       font-weight: bold;
       font-size: 24px;
       line-height: 1.17;
