--- a/assets/components/contributionsThankYou/contributionsThankYouPage.scss
+++ b/assets/components/contributionsThankYou/contributionsThankYouPage.scss
@@ -27,7 +27,7 @@
   }
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
