--- a/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
+++ b/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
@@ -47,7 +47,7 @@
 
 .component-direct-debit-pop-up-form__heading {
   float: left;
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bolder;
   font-size: 24px;
   line-height: 30px;
