--- a/assets/components/marketingConsent/marketingConsent.scss
+++ b/assets/components/marketingConsent/marketingConsent.scss
@@ -1,7 +1,7 @@
 .component-page-section--marketing-consent {
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
