--- a/assets/components/readyToSupport/readyToSupport.scss
+++ b/assets/components/readyToSupport/readyToSupport.scss
@@ -41,7 +41,7 @@
   font-size: 36px;
   line-height: 1;
   color: gu-colour(garnett-neutral-1);
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bold;
   margin-bottom: $gu-v-spacing * 2;
 
