--- a/assets/components/threeSubscriptions/threeSubscriptions.scss
+++ b/assets/components/threeSubscriptions/threeSubscriptions.scss
@@ -7,7 +7,7 @@
   }
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
@@ -98,7 +98,7 @@
     font-size: 30px;
     line-height: 1;
     font-weight: 400;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
 
     @include mq($from: phablet, $until: leftCol) {
       font-size: 24px;
