--- a/assets/components/whySupport/whySupport.scss
+++ b/assets/components/whySupport/whySupport.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
 
   .component-page-section__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-size: 24px;
     line-height: 1.17;
     font-weight: bold;
