--- a/assets/components/yourDetails/yourDetails.scss
+++ b/assets/components/yourDetails/yourDetails.scss
@@ -2,7 +2,7 @@
   border-top: 1px solid gu-colour(garnett-neutral-4);
 
   .component-page-section__header {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-weight: bold;
     font-size: 24px;
     line-height: 1.17;
