--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -108,7 +108,7 @@
   }
 
   .product-block__heading {
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-weight: 200;
     font-size: 22px;
     line-height: 26px;
@@ -135,7 +135,7 @@
   .product-block__product-heading {
     color: #fff;
     font-weight: bold;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     line-height: 1;
     display: inline;
     padding: 0 5px 3px;
@@ -145,13 +145,13 @@
     margin: $gu-v-spacing / 2 0 $gu-v-spacing;
     font-size: 16px;
     line-height: 1.25;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
   }
 
   .component-feature-list {
     font-size: 16px;
     line-height: 1.25;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#ff4e36"/></svg>');
     margin-left: 26px;
 
@@ -213,7 +213,7 @@
     text-align: center;
     font-size: 50px;
     line-height: 80px;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-weight: bold;
     background-color: gu-colour(news-garnett-highlight);
     margin: 0 auto -35px;
@@ -264,7 +264,7 @@
 
   .digital-subscription-landing-header__title-copy {
     color: #ffffff;
-    font-family: $gu-egyptian-web;
+    font-family: $gu-headline;
     font-weight: bold;
     margin-left: 10px;
     padding-top: 2px;
