Updated misleading comment.

--- a/assets/stylesheets/gu-sass/webfonts.scss
+++ b/assets/stylesheets/gu-sass/webfonts.scss
@@ -246,7 +246,7 @@ $guss-webfonts: (
 );
 
 
-// ----- Guardian Egyptian Web Fonts ----- //
+// ----- Guardian Headline Web Fonts ----- //
 
 @font-face {
     font-family: "Guardian Headline";
