--- a/assets/components/contributionSelection/contributionSelection.scss
+++ b/assets/components/contributionSelection/contributionSelection.scss
@@ -46,6 +46,35 @@
   }
 }
 
+.component-contribution-selection--annual-test {
+  .component-contribution-selection__type {
+    .component-radio-toggle {
+      border: none;
+    }
+    .component-radio-toggle__button {
+      display: inline-block;
+      border: 2px solid gu-colour(news-garnett-highlight);
+      border-radius: 600px;
+      margin: 0 10px 0 0;
+    }
+
+    .component-radio-toggle__label {
+      @include mq($until: mobileMedium) {
+        padding: 13px ($gu-h-spacing / 2);
+      }
+    }
+  }
+  .component-number-input {
+    width: 161px;
+  }
+
+  .component-contribution-selection__custom-amount {
+    @include mq($from: phablet) {
+      margin-left: 3px;
+    }
+  }
+}
+
 .component-contribution-selection__type {
   font-size: 14px;
   line-height: 14px;
@@ -53,7 +82,7 @@
 
   .component-radio-toggle {
     display: inline-block;
-    border: none;
+    border: 2px solid gu-colour(news-garnett-highlight);
     border-radius: 600px;
   }
 
@@ -62,17 +91,6 @@
     display: inline-block;
     width: 60px;
     text-align: center;
-
-    @include mq($until: mobileMedium) {
-      padding: 13px ($gu-h-spacing / 2);
-    }
-  }
-
-  .component-radio-toggle__button {
-    display: inline-block;
-    border: 2px solid gu-colour(news-garnett-highlight);
-    border-radius: 600px;
-    margin: 0 10px 0 0;
   }
 }
 
@@ -100,7 +118,7 @@
   @include mq($from: phablet) {
     display: inline-block;
     vertical-align: top;
-    margin-left: 3px;
+    margin-left: $gu-v-spacing;
     margin-top: $gu-v-spacing;
   }
 
@@ -108,7 +126,6 @@
     border: 2px solid gu-colour(news-garnett-highlight);
     padding: 8px 0;
     margin-top: 0;
-    width: 161px;
   }
 
   .component-number-input__label {
