--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -30,7 +30,7 @@ header[role="banner"] {
   top: $gu-v-spacing * 2;
 }
 
-.countries {
+.countryGroups {
   background: white;
   border: 1px solid gu-colour(garnett-neutral-4);
   font-family: $gu-text-sans-web;
@@ -39,7 +39,7 @@ header[role="banner"] {
   width: 100%;
 }
 
-.countries summary {
+.countryGroups summary {
   align-items: center;
   color: gu-colour(garnett-neutral-2);
   display: flex;
@@ -49,48 +49,48 @@ header[role="banner"] {
   transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
 }
 
-.countries__label {
+.countryGroups__label {
   flex: 1;
 }
 
-.countries .icon {
+.countryGroups .icon {
   text-align: center;
   width: 40px;
 }
 
-.countries .icon--world {
+.countryGroups .icon--world {
   padding: 0 $gu-v-spacing;
 }
 
-.countries .icon__arrow-up {
+.countryGroups .icon__arrow-up {
   display: none;
 }
 
-.countries[open] .icon__arrow-up {
+.countryGroups[open] .icon__arrow-up {
   display: initial;
 }
 
-.countries[open] .icon__arrow-down {
+.countryGroups[open] .icon__arrow-down {
   display: none;
 }
 
-.countries summary:hover,
-.countries summary:focus {
+.countryGroups summary:hover,
+.countryGroups summary:focus {
   box-shadow: 0 0 0 3px gu-colour(news-garnett-highlight);
   color: inherit;
 }
 
-.countries summary::-webkit-details-marker {
+.countryGroups summary::-webkit-details-marker {
   display: none;
 }
 
-.countries__list {
+.countryGroups__list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.countries__item > a {
+.countryGroups__item > a {
   color: inherit;
   display: flex;
   padding: 0 40px;
@@ -98,13 +98,13 @@ header[role="banner"] {
   text-decoration: none;
 }
 
-.countries__item > a:hover,
-.countries__item > a:focus {
+.countryGroups__item > a:hover,
+.countryGroups__item > a:focus {
   background: gu-colour(news-garnett-highlight);
   font-weight: bold;
 }
 
-.countries__item .icon {
+.countryGroups__item .icon {
   margin-left: -40px;
 }
 
@@ -157,10 +157,6 @@ footer[role="contentinfo"] {
   font-family: $gu-text-sans-web;
 }
 
-.license__txt {
-  font-size: inherit;
-}
-
 /*= BREAKPOINTS */
 
 header[role="banner"] {
@@ -192,7 +188,7 @@ header[role="banner"] {
     flex-direction: row-reverse;
     justify-content: space-between;
   }
-  }
+}
 
 @include mq($from: leftCol) {
   header[role="banner"],
@@ -218,7 +214,7 @@ header[role="banner"] {
     width: 300px;
     margin-left: calc(50% - 400px); /* account for the 11px of negative margin */
   }
-  }
+}
 
 @supports(display: grid) {
   .gu-content {
@@ -241,7 +237,11 @@ header[role="banner"] {
     
   @include mq($from: tablet) {
     .gu-content,
-    header[role="banner"],
+    header[role="banner"] {
+      padding: 0;
+      width: auto;
+    }
+
     footer[role="contentinfo"] {
       padding: 0 0 ($gu-v-spacing * 2);
       width: auto;
@@ -260,7 +260,7 @@ header[role="banner"] {
       grid-column: 9;
     }
 
-    .countries {
+    .countryGroups {
       grid-column: 2 / 8;
       grid-row: 1;
     }
@@ -271,7 +271,7 @@ header[role="banner"] {
       grid-column: 2 / 6;
     }
 
-    .license {
+    .component-footer__content {
       grid-column: 2 / 9;
     }
   }
@@ -300,7 +300,7 @@ header[role="banner"] {
       grid-column: 4 / 8;
     }
 
-    .license {
+    .component-footer__content {
       grid-column: 2 / 11;
     }
   }  
@@ -326,7 +326,7 @@ header[role="banner"] {
       grid-column: 5 / 9;
     }
 
-    .license {
+    .component-footer__content {
       grid-column: 2 / 12;
     }
   }
