--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -9,11 +9,6 @@ body {
   padding: 0;
 }
 
-input::-webkit-inner-spin-button,
-details:not([open]) > :not(summary) {
-  display: none;
-}
-
 /*= HEADER */
 
 header[role="banner"] {
@@ -47,6 +42,10 @@ header[role="banner"] {
   height: 40px;
   outline: none;
   transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
+}
+
+.countryGroups:not([open]) > :not(summary) {
+  display: none;
 }
 
 .countryGroups__label {
