--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -132,7 +132,7 @@ body {
 h1 {
   border-bottom: 1px solid gu-colour(garnett-neutral-4);
   color: gu-colour(garnett-neutral-1);
-  font: bold 24px/1.25 $gu-egyptian-web;
+  font: bold 24px/1.25 $gu-headline;
   margin: 0 -10px;
   padding: 0 10px $gu-v-spacing;
 }
@@ -352,7 +352,7 @@ form {
 }
 
 .form__radio-group--tabs {
-  font-family: $gu-egyptian-web;
+  font-family: $gu-headline;
   font-weight: bold;
 }
 
