--- a/app/views/newThankYou.scala.html
+++ b/app/views/newThankYou.scala.html
@@ -3,27 +3,27 @@
 
 <section class="confirmation">
   <h2>
-    <span>Your contribution:</span>
-    <span>$25</span>
+    <span class="hidden">Your contribution:</span>
+    <span class="confirmation__amount">$25</span>
   </h2>
-  <p>Look out for an emailing confirming your monthly recurring contribution</p>
+  <p class="confirmation__message">Look out for an emailing confirming your monthly recurring contribution</p>
   <p>If you have any questions? <a href="#">Contact us</a></p>
 </section>
 
-<section class="social">
+<section class="confirmation confirmation--social">
   <h3>Spread the word</h3>
-  <ul>
-    <li><a href="#">Twitter</a></li>
-    <li><a href="#">Facebook</a></li>
+  <ul class="confirmation__links">
+    <li><a class="confirmation__link" href="#">Twitter</a></li>
+    <li><a class="confirmation__link" href="#">Facebook</a></li>
   </ul>
 </section>
 
-<section class="newsletter">
+<section class="confirmation confirmation--newsletter">
   <h3>Subscriptions, membership and contributions</h3>
   <p>News and offers from The Guardian, The Observer and Guardian Weekly, on the ways to read and support our journalism. Already a member, subscriber or contributor, opt in here to receive your regular emails and updates.</p>
-  <a href="#">Subscribe</a>
+  <a class="button button--newsletter" href="#">Subscribe</a>
 </section>
 
-<div class="backtothegu">
-  <a href="#">Return to The Guardian</a>
+<div class="confirmation confirmation--backtothegu">
+  <a class="button button--wob" href="#">Return to The Guardian</a>
 </div>
