--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -55,8 +55,10 @@ header[role="banner"] {
   width: 40px;
 }
 
-.countryGroups .icon--world {
+.countryGroups .svg-globe {
   padding: 0 $gu-v-spacing;
+  width: 14px;
+  height: 14px;
 }
 
 .countryGroups .icon__arrow-up {
