Add static image assets for the PayPal logo (PNG) and the credit card icon (SVG)

--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -605,6 +605,16 @@ form {
   fill: gu-colour(sport-garnett-media-main-1);
 }
 
+.form__field .svg-user {
+  width: 18px;
+  height: 18px;
+}
+
+.form__field .svg-enveloppe {
+  width: 16px;
+  height: 10px;
+}
+
 .icon {
   fill: inherit;
 }
