Move PayPal (PNG) into an SVG

--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -501,7 +501,7 @@ form {
   flex: 1;
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .radio-ui__icon--paypal {
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .svg-paypal {
   height: 18px;
   width: 15px;
   margin-right: 16px;
