--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -508,7 +508,7 @@ form {
   margin-left: 5px;
 }
 
-.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .svg-credit-card {
+.form__radio-group--buttons .form__radio-group__input + .form__radio-group__label .svg-new-credit-card {
   height: 14px;
   width: 22px;
   margin-right: 10px;
