--- a/app/views/newThankYou.scala.html
+++ b/app/views/newThankYou.scala.html
@@ -1,23 +1,23 @@
 
-<h1>Thank you for your contribution to independant journalism</h1>
+<h1>Thank you for your contribution to independent journalism</h1>
 
 <section class="confirmation confirmation--newsletter">
-  <h3>Subscriptions, membership and contributions</h3>
+  <h3 class="confirmation__title">Subscriptions, membership and contributions</h3>
   <p>News and offers from The Guardian, The Observer and Guardian Weekly, on the ways to read and support our journalism. Already a member, subscriber or contributor, opt in here to receive your regular emails and updates.</p>
   <a class="button button--newsletter" href="#">Subscribe</a>
 </section>
 
 <section class="confirmation">
-  <h2>
+  <h2 class="confirmation__maintitle">
     <span class="hidden">Your contribution:</span>
     <span class="confirmation__amount">$25</span>
   </h2>
-  <p class="confirmation__message">Look out for an emailing confirming your monthly recurring contribution</p>
+  <p class="confirmation__message">Look out for an email confirming your monthly recurring contribution</p>
   <p>If you have any questions? <a href="#">Contact us</a></p>
 </section>
 
 <section class="confirmation confirmation--social">
-  <h3>Spread the word</h3>
+  <h3 class="confirmation__title">Spread the word</h3>
   <ul class="confirmation__links">
     <li><a class="confirmation__link" href="#">Twitter</a></li>
     <li><a class="confirmation__link" href="#">Facebook</a></li>
