Add some space aorund the country selector

--- a/assets/pages/contributions-landing/newContributionsLanding.scss
+++ b/assets/pages/contributions-landing/newContributionsLanding.scss
@@ -32,6 +32,7 @@ header[role="banner"] {
   background: gu-colour(garnett-neutral-5);
   border: 1px solid gu-colour(garnett-neutral-4);
   font-family: $gu-text-sans-web;
+  margin-top: $gu-v-spacing;
   max-width: 355px;
   padding: 0;
   width: 100%;
